--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -41,7 +41,7 @@
                         <i class="fa-solid fa-indian-rupee-sign text-yellow-400"></i>
                         <h2 class="text-gray-400 text-md md:text-2xl font-medium">Total Sales</h2>
                     </div>                    
-                    <p class="font-light text-xl md:text-2xl text-white"><%= totalSales %></p>
+                    <p class="font-light text-xl md:text-2xl text-white"><%= totalSales.toLocaleString() %></p>
                 </div>
                 <div class="bg-black rounded-xl shadow p-3 flex flex-col items-center justify-center text-center">
                     <div class="flex items-center space-x-2">
