--- a/views/user/product-details.ejs
+++ b/views/user/product-details.ejs
@@ -366,7 +366,7 @@
               </p>
               <p class="text-xs text-green-600">
                 (Save ₹<%= (rp.mrp - rp.price).toLocaleString() %>, 
-                <%= Math.round(((rp.mrp - rp.price) / rp.mrp) * 100) %>% off)
+                <%= Math.round(((rp.mrp - rp.price) / rp.mrp) * 100) %>% OFF)
               </p>
             <% } %>
           </a>
