--- a/views/user/partials/userFilter.ejs
+++ b/views/user/partials/userFilter.ejs
@@ -109,7 +109,7 @@
             </div>
 
             <div class="mt-6">
-              <button type="submit" class="bg-teal-600 text-white py-2 hover:bg-teal-700 w-full">
+              <button type="submit" class="bg-teal-600 text-white py-2 w-full" style="background-color: #0a66c2;">
                 Apply
               </button>
             </div>
