--- a/views/user/partials/userNavbar.ejs
+++ b/views/user/partials/userNavbar.ejs
@@ -71,7 +71,7 @@
                           <li><a href="/user/account" class="block px-4 py-2 hover:bg-gray-100 font-extralight">
                             <i class="fa-solid fa-user mr-2"></i>My Account
                           </a></li>
-                          <li><a href="/user/orders" class="block px-4 py-2 hover:bg-gray-100 font-extralight">
+                          <li><a href="/order/details" class="block px-4 py-2 hover:bg-gray-100 font-extralight">
                             <i class="fa-solid fa-bag-shopping mr-2"></i>Orders
                           </a></li>
                           <li><a href="/user/wishlist" class="block px-4 py-2 hover:bg-gray-100 font-extralight">
@@ -92,7 +92,7 @@
                           <li><a href="/user/account" class="block px-4 py-2 hover:bg-gray-100 font-extralight">
                             <i class="fa-solid fa-user mr-2"></i>My Account
                           </a></li>
-                          <li><a href="/user/orders" class="block px-4 py-2 hover:bg-gray-100 font-extralight">
+                          <li><a href="/order/details" class="block px-4 py-2 hover:bg-gray-100 font-extralight">
                             <i class="fa-solid fa-bag-shopping mr-2"></i>Orders
                           </a></li>
                           <li><a href="/user/wishlist" class="block px-4 py-2 hover:bg-gray-100 font-extralight">
