--- a/views/user/user-account.ejs
+++ b/views/user/user-account.ejs
@@ -20,9 +20,9 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
 
              <a href="/user/profile/<%= user._id %>" class="bg-white shadow p-6 flex flex-col items-center hover:shadow-lg transition">
-                <i class="fa-solid fa-circle-user text-4xl text-blue-700 mb-4"></i>
+                <i class="fa-solid fa-circle-user text-4xl mb-4" style="color: #0a66c2;"></i>
                 <h2 class="font-semibold text-xl mb-2">My Profile</h2>
-                <p class="text-gray-500 text-center text-sm mb-4">
+                <p class="text-gray-500 font-extralight text-center text-sm mb-4">
                     View and edit your personal details.
                 </p>
              </a>
@@ -30,29 +30,29 @@
              <a href="/user/address%>" class="bg-white shadow p-6 flex flex-col items-center hover:shadow-lg transition">
                 <i class="fa-solid fa-address-card text-4xl text-yellow-600 mb-4"></i>
                 <h2 class="font-semibold text-xl mb-2">My Addresses</h2>
-                <p class="text-gray-500 text-center text-sm mb-4">
+                <p class="text-gray-500 font-extralight text-center text-sm mb-4">
                     Manage your saved addresses for faster checkout.
                 </p>
              </a>
 
              <a href="/order/details" class="bg-white shadow p-6 flex flex-col items-center hover:shadow-lg transition">
-                <i class="fa-solid fa-box-open text-4xl text-green-600 mb-4"></i>
+                <i class="fa fa-box text-4xl text-green-600 mb-4"></i>
                 <h2 class="font-semibold text-xl mb-2">My Orders</h2>
-                <p class="text-gray-500 text-center text-sm mb-4">
+                <p class="text-gray-500 font-extralight text-center text-sm mb-4">
                     Track and manage your recent orders.
                 </p>
              </a>
              <a href="/user/wishlist" class="bg-white shadow p-6 flex flex-col items-center hover:shadow-lg transition">
                 <i class="fa-solid fa-heart text-4xl text-rose-600 mb-4"></i>
                 <h2 class="font-semibold text-xl mb-2">My Wishlist</h2>
-                <p class="text-gray-500 text-center text-sm mb-4">
+                <p class="text-gray-500 font-extralight text-center text-sm mb-4">
                     View and manage your saved items for later purchase.
                 </p>
              </a>
              <a href="/user/wallet" class="bg-white shadow p-6 flex flex-col items-center hover:shadow-lg transition">
                 <i class="fa-solid fa-wallet text-4xl text-cyan-600 mb-4"></i>
                 <h2 class="font-semibold text-xl mb-2">My Wallet</h2>
-                <p class="text-gray-500 text-center text-sm mb-4">
+                <p class="text-gray-500 font-extralight text-center text-sm mb-4">
                     Check your balance, add funds, and view transactions.
                 </p>
              </a>
